Use getFirst()/removeFirst() instead of get(0)/remove(0).
This is apparently new in Java 21, IIRC.